src/test/ui/const-generics/wf-misc.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/wf-misc.rs:8:12
   |
LL |     let _: [u8; N + 1];
   |            ^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/wf-misc.rs:16:12
   |
LL |     let _: Const::<{N + 1}>;
   |            ^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 2 previous errors

